--- a/exam.tex
+++ b/exam.tex
@@ -314,24 +314,24 @@
 \begin{theorem}
 	Автоматные языки замкнуты относительно:
 	\begin{itemize}
+		\item Дополнения
 		\item Конкатенации
 		\item Объединения
-		\item Пересечения
 		\item Итерации Клини
-		\item Дополнения
+		\item Пересечения
+		\item Разности
 	\end{itemize}
 \end{theorem}
 
 \begin{proof}
-	В доказательстве используем определение автоматов с ровно одним завершающим состоянием.
-
-	Доказывается рукомаханиям с рисуночками автоматов:
+	Как мы выясним позднее, множество регулярных языков совпадает с множеством автоматных языков. Тогда:
 	\begin{itemize}
-		\item Конкатенация последовательным соединением
-		\item Объединение параллельным соединением
-		\item Строим декартово произведение автоматов с $1$-буквенными переходами, объявляя завершающими состояниями те, которые являются завершающими по обеим координатам.
-		\item Для итерации Клини замыкаем вход автомата с выходом, а также пробрасываем переход по $\varepsilon$ из входа в выход.
 		\item Для дополнения строим ПДКА и меняем завершающие состояние и незавершающие между собой!
+		\item $L_1 L_2$ -- регулярный по определению.
+		\item $L_1 \cup L_2$ -- регулярный по определению.
+		\item $L^*$ -- регулярный по определению.
+		\item $L_1 \cap L_2 = \overline{\overline{L_1} \cup \overline{L_2}}$ -- регулярный.
+		\item $L_1 \setminus L_2 = L_1 \cap \overline{L_2}$ -- регулярный.
 	\end{itemize}
 \end{proof}
 
