--- a/exam.tex
+++ b/exam.tex
@@ -872,6 +872,17 @@
 \end{proof}
 
 \subsection{Удаление непорождающих и недостижимых символов в алгоритме примедения к нормальной форме Хомского. Асимптотика приведённых шагов.}
+
+\begin{definition}
+	Грамматикой в нормальной форме Хомского называется КС грамматика, в которой могут содержаться правила только следующего вида:
+	\begin{itemize}
+		\item $A \rightarrow BC$
+		\item $A \rightarrow a$
+		\item $S \rightarrow \varepsilon$
+	\end{itemize}
+	где $a$ -- терминал, $A, B, C$ -- нетерминалы, $S$ -- стартовая вершина, $\varepsilon$ -- пустая строка, стартовая вершина не содержится в правых частях правил.
+\end{definition}
+
 \subsubsection*{Удаление непорождающих символов}
 \begin{definition}
 	Символ $Y \in N$ называется \textbf{порождающим}, если:
